--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <h1>Kristi</h1>
-        <h2><a href="https://github.com/Deiondrae">Github</a></h2>
+        <h2><a href="https://github.com/eemeeee">Github</a></h2>
     </body>
     </html>
     
